Add css for loader

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -9,6 +9,20 @@
   display: none;
 }
 
+.loader {
+	background-image: url(../imgs/loader.svg);
+	background-size: 100px 100px;
+	background-repeat: no-repeat;
+	width: 100px;
+	height: 100px;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
