invalidation of daemon state, overlay component, and prototype loader added

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -10,32 +10,27 @@
 }
 
 .loader {
+  display: block;
 	background-image: url(../imgs/loader.svg);
-	background-size: 100px 100px;
-	background-repeat: no-repeat;
 	width: 100px;
 	height: 100px;
-	margin: auto;
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+  background-size: 100px 100px;
+	background-repeat: no-repeat;
+  border: none;
+  margin: auto;
+}
+
+.loader.inline {
+  width: 50px;
+	height: 50px;
+  background-size: 50px 50px;
 }
 
 @keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to { 
-        transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes rotate {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to { 
-        -webkit-transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
