--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -439,19 +439,20 @@ nav {
   font-size: 18px;
 }
 
-.black {
-  color: #0c0c0c;
-}
-
-.glass {
-  opacity: 0.2;
-}
-
-.overlay {
+.loader {
+  display: block;
+	background-image: url(../imgs/loader.svg);
+	width: 100px;
+	height: 100px;
+  background-size: 100px 100px;
+	background-repeat: no-repeat;
+  border: none;
   margin: auto;
-  width: 100%;
-  height: 100%;
+  opacity: 0.5;
 }
-.overlay .page-takeover {
-  position: absolute;
+
+.loader.inline {
+  width: 50px;
+	height: 50px;
+  background-size: 50px 50px;
 }
