--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -442,13 +442,17 @@ nav {
 .loader {
   display: block;
 	background-image: url(../imgs/loader.svg);
-	width: 100px;
-	height: 100px;
+  background-color: rgba(255, 255, 255, 0.9);
+	width: 100%;
+	height: 100%;
   background-size: 100px 100px;
 	background-repeat: no-repeat;
+  background-position: center center;
   border: none;
   margin: auto;
-  opacity: 0.5;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .loader.inline {
