--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -375,6 +375,18 @@ nav {
   animation-timing-function: linear;
 }
 
+.connection[status="0"] {
+  color: #7ED321;
+}
+
+.connection[status="1"] {
+  color: #F6A623;
+}
+
+.connection[status="2"] {
+  color: #fa6e50;
+}
+
 .node-options {
   border: 1px solid #eee;
   border-radius: 4px;
