--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -183,6 +183,15 @@ input[type="file"] {
   margin-left: 1em;
 }
 
+.error-text {
+  color: #ff0033;
+}
+
+.nat-checkbox {
+  display: inline;
+  margin: 0px 20px 0px 10px;
+}
+
 
 /*
     Wizard Storage Size Slider
