Change to stable bootstrap-vue

--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -9,6 +9,10 @@ body {
   line-height: 26px;
 }
 
+.container {
+  max-width: 1340px;
+}
+
 * {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
